    Thanks to Fabio Kuhn for the patch (pull request #133).
  * [OSX] Fixed the wrong default settings of short cut key in menu. Thanks to
    Kazuhiro NISHIYAMA for the detective work.
  * Fixed a bug where a boxed struct would incorrectly be interpreted as a
    object type, leading to the dispatcher not recognizing a signature.

= RubyMotion 2.10 =

  * Fixed a critical regression in the compiler where DWARF metadata would not
    be generated, causing .dSYM bundles to miss debugging symbols for Ruby
    code. The regression was introduced in 2.8. If you submitted apps built
    with 2.8 or 2.9 to Apple and need to symbolicate crash reports, you can
    rebuild them with 2.10 and use the new .dSYM bundle.
  * Fixed a bug where `motion changelog' does not work.
  * Fixed a regression introduced in 2.9 that could lead to a compiler crash
    when using the GLKit framework.
  * Fixed a bug in `rake device' where it could sometimes crashes when
    retrieving console logs.
  * Fixed a bug in the build system where the build would fail when generating
    BridgeSupport metadata if the Xcode path contained a space character.
    Thanks to Michal Jirku for the detective work.
  * Fixed a warning in the build system when creating a universal static
    archive for a vendored project.
  * [iOS] Fixed the build system to really not build for 64-bit by default.
  * [iOS] Fixed a regression where exceptions could be not rescued in GCD
    blocks on device, apparently due to an underlying change in iOS 7.
    Thanks to Mark Frawley for the detective work.
  * [iOS] Fixed a bug where `rake device' would cause an Assertion Failed when
    `app.name' contains non-ascii characters.

= RubyMotion 2.9 =

  * Work around what is very likely a bug in the App Store verification
    process which would reject RubyMotion apps based on the fact that certain
    __builtin__xxx_chk() functions of the C runtime are marked as private API.